experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/recompilationFailures/539/log-1-539.log

Test.java:184: error: incompatible types: int cannot be converted to boolean
                            blArray[n2 + 1] = n9;
                                              ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

